# aoc2024_hs

./: .gitignore  README.md  aoc2024.cabal  flake.nix  prepare.sh
nix-modules/: devshell.nix  formatting.nix  horizon-haskell.nix  pre-commit.nix
src/: DayOne.hs  DayTwo.hs  Lib.hs
