cabal-version: 3.0
name:          aoc2024
version:       0.1.0.0
maintainer:    dean.eckert@red-oak-consulting.com
author:        Dean
build-type:    Simple

library
  exposed-modules:  Lib
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:    base

executable aoc2024
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
    , aoc2024
    , base
